--- a/image.html
+++ b/image.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 
 <style>
@@ -158,7 +159,9 @@
             Praesentium et vitae fugit.</p>
         <div class="container mt-3">
             <div class="row">
-                <div class="col-lg-6 col-md-6 mb-2 col-sm-12">
+                <div class="col-lg-6 col-md-6 mb-2 col-sm-12" data-aos="fade-right"
+                data-aos-offset="300"
+                data-aos-easing="ease-in-sine">
                     <div class="card">
                         <div class="card-header text-center">name character</div>
                         <div class="card-body">
@@ -184,7 +187,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 col-md-6 mb-2 col-sm-12">
+                <div class="col-lg-6 col-md-6 mb-2 col-sm-12" data-aos="fade-left"
+                data-aos-offset="300"
+                data-aos-easing="ease-in-sine">
                     <div class="card">
                         <div class="card-header text-center">name character</div>
                         <div class="card-body">
@@ -209,7 +214,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 col-md-6 mb-2 col-sm-12">
+                <div class="col-lg-6 col-md-6 mb-2 col-sm-12" data-aos="fade-right"
+                data-aos-offset="300"
+                data-aos-easing="ease-in-sine">
                     <div class="card">
                         <div class="card-header text-center">name character</div>
                         <div class="card-body">
@@ -235,7 +242,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 col-md-6 mb-2 col-sm-12">
+                <div class="col-lg-6 col-md-6 mb-2 col-sm-12" data-aos="fade-left"
+                data-aos-offset="300"
+                data-aos-easing="ease-in-sine">
                     <div class="card">
                         <div class="card-header text-center">name character</div>
                         <div class="card-body">
@@ -384,7 +393,12 @@
             </table>
         </div>
     </div>
+
     <script src="js/bootstrap.bundle.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
